[BISERVER-5310] Drop-down arrow sometimes not visible if in table within Internet Explorer. Made some changes to the way the table is layed out to correct the issue in IE.

--- a/src/org/pentaho/gwt/widgets/public/Widgets.css
+++ b/src/org/pentaho/gwt/widgets/public/Widgets.css
@@ -784,6 +784,7 @@ body{
 
 .custom-list-textbox{
   border: none;
+  overflow:hidden;
 }
 
 .drop-popup{
